# PEFT-LoRA-Basic

./: QLoRA_SentimentAnalysis_Llama3_2_1B.ipynb  README.md  pyproject.toml  sat_qa_app.py  template.py
notebooks/: Llama3_2_Instruct_3B_IT_SAT_Reading.ipynb  Llama3_2_Instruct_3B_IT_SAT_Reading_Custom_Inference.ipynb  LoRA_SentimentAnalysis_Llama3_2_1B.ipynb  MCQA_LLaMA_3_2_1B_QLoRA.ipynb  TinyLlama_1B_SFT_ViStudentFeedback.ipynb
src/: data.py  inference.py  model.py  qa_app.py  train.py
