[project]
name = "peft-lora-basic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitsandbytes==0.42.0",
    "gradio>=5.42.0",
    "openai>=1.99.9",
    "peft>=0.17.0",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "transformers>=4.55.2",
]
